--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="button">Замовити послугу</button>
+          <button type="button" class="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <section class="section">
@@ -388,17 +388,17 @@
           >
           <address>
             <ul>
-              <li class="footer-list">
+              <li class="footer-list footer-transition">
                 <a href="https://goo.gl/maps/j4HgzEJUqqc4Ymoc8" class="address">
                   м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-list">
+              <li class="footer-list footer-transition">
                 <a href="mailto:info@devstudio.com" class="contacts-footer"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="footer-transition">
                 <a href="tel:+380961111111" class="contacts-footer"
                   >+38 096 111 11 11</a
                 >
@@ -441,5 +441,16 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="button-close" data-modal-close>
+          <svg class="button-close-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js">
+    </script>
   </body>
 </html>
