--- a/portfolio.html
+++ b/portfolio.html
@@ -89,13 +89,16 @@
           <ul class="container-projects">
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-1.jpg"
-                alt="Проект-1"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-1.jpg"
+                  alt="Проект-1"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Технокряк</h2>
                 <p class="content content-view">Веб-сайт</p>
@@ -104,13 +107,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
+                <div class="projects-top-wrap">
+                  <img
                 class="project-picture"
                 src="./images/project-2.jpg"
                 alt="Проект-2"
                 width="370"
                 height="294"
               />
+              <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
               <div class="projects-item">
                 <h2 class="title title-project">
                   Постер New Orlean vs Golden Star
@@ -121,13 +127,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
+                <div class="projects-top-wrap">
+                  <img
                 class="project-picture"
                 src="./images/project-3.jpg"
                 alt="Проект-3"
                 width="370"
                 height="294"
               />
+              <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
               <div class="projects-item">
                 <h2 class="title title-project">Ресторан Seafood</h2>
                 <p class="content content-view">Додаток</p>
@@ -136,13 +145,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-4.jpg"
-                alt="Проект-4"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-4.jpg"
+                  alt="Проект-4"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Проєкт Prime</h2>
                 <p class="content content-view">Маркетинг</p>
@@ -151,13 +163,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-5.jpg"
-                alt="Проект-5"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-5.jpg"
+                  alt="Проект-5"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Проєкт Boxes</h2>
                 <p class="content content-view">Додаток</p>
@@ -166,13 +181,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-6.jpg"
-                alt="Проект-6"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-6.jpg"
+                  alt="Проект-6"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Inspiration has no Borders</h2>
                 <p class="content content-view">Веб-сайт</p>
@@ -181,13 +199,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-7.jpg"
-                alt="Проект-7"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-7.jpg"
+                  alt="Проект-7"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Видання Limited Edition</h2>
                 <p class="content content-view">Дизайн</p>
@@ -196,13 +217,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-8.jpg"
-                alt="Проект-8"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-8.jpg"
+                  alt="Проект-8"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Проєкт LAB</h2>
                 <p class="content content-view">Маркетинг</p>
@@ -211,13 +235,16 @@
             </li>
             <li class="projects-list">
               <a href="" class="project-link">
-                <img
-                class="project-picture"
-                src="./images/project-9.jpg"
-                alt="Проект-9"
-                width="370"
-                height="294"
-              />
+                <div class="projects-top-wrap">
+                  <img
+                  class="project-picture"
+                  src="./images/project-9.jpg"
+                  alt="Проект-9"
+                  width="370"
+                  height="294"
+                />
+                <p class="projects-top-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="projects-item">
                 <h2 class="title title-project">Growing Business</h2>
                 <p class="content content-view">Додаток</p>
