--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="./index.html" class="link-nav">Студія</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="link-nav current">Портфоліо</a>
+              <a href="./portfolio.html" class="link-nav current underline">Портфоліо</a>
             </li>
             <li>
               <a href="" class="link-nav">Контакти</a>
