--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         >
         <nav class="navigation">
           <ul class="header-nav">
-            <li><a href="./index.html" class="link-nav current">Студія</a></li>
+            <li><a href="./index.html" class="link-nav current underline">Студія</a></li>
             <li><a href="./portfolio.html" class="link-nav">Портфоліо</a></li>
             <li><a href="" class="link-nav">Контакти</a></li>
           </ul>
