--- a/index.html
+++ b/index.html
@@ -448,6 +448,12 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form class="modal-form">
+          <input type="text" class="modal-input">
+          <input type="text" class="modal-input">
+          <input type="text" class="modal-input">
+        </form>
       </div>
     </div>
     <script src="./js/modal.js">
